# shady3D

./: .gitignore  CMakeLists.txt  main.cpp  vcpkg.json
projects/client/: CMakeLists.txt  editorClient.cpp  editorClient.hpp  main.cpp
projects/client/shaders/: main.wgsl  radial.wgsl
projects/server/: CMakeLists.txt  main.cpp
projects/shadyServer/: app.go  go.mod  main.go
resources/config/: input.json
resources/meshes/: cat.mtl
shaders/: main.wgsl  model.wgsl  radial.wgsl
src/: app.hpp  game.cppm  game.hpp  input.hpp  loader.hpp  main.cpp
src/engine/: app.cppm  app.hpp  editorClient.hpp  input.cppm  input.hpp  loader.cppm  loader.hpp
src/server/: CMakeLists.txt  main.cpp
